fixup field settings instructions

--- a/introvert/templates/settings.html
+++ b/introvert/templates/settings.html
@@ -2,7 +2,7 @@
 
 {{ forms.checkboxSelectField({
 	label: "Sources"|t,
-	instructions: "Which sources do you want to see reverse related Entries from?"|t({ type: type|lower }),
+	instructions: "Which sources do you want to see reverse related Entries from?"|t,
 	id: 'introvertSections',
 	name: 'sections',
 	options: sectionOptions,
