--- a/src/templates/settings.html
+++ b/src/templates/settings.html
@@ -6,5 +6,5 @@
 	id: 'introvertSections',
 	name: 'sections',
 	options: sectionOptions,
-	values: settings.sections
+	values: (settings.sections ?? [])
 })}}
